sort.basic.cocktail.AlgCocktailSort1.scala.error
Erreur de compilation :
AlgCocktailSort1:17: error: not found: value j
      if(getValeur(i) > getValeur(j - 1)){
                                  ^