sort.basic.cocktail.AlgCocktailSort1.scala.code
def cocktailSort() {


	var flag:Boolean = true;
	var index:Int = 0;
	do{
		flag = false;
		for (i <- 0 to getNombreValeurs - 2 - index){
			if(getValeur(i) > getValeur(i+1)){
				echange(i,i + 1);
				flag = true;
			}
		}
		for (i <- 0 to getNombreValeurs - 2 - index){
			// j = getNombreValeurs - 2 - i - index
			if(getValeur(i) > getValeur(j - 1)){
				echange(i,i - 1);
				flag = true;
			}
		}
		
	}while(flag)
}
